# object_babbling

./: BAXTER_TIPS.md  CMakeLists.txt  INSTALL.md  PR2_TIPS.md  README.md  package.xml  tips_calibration
action/: pose_goal.action
include/: globals.h
include/data/: babbling_node.cpp  data_controller_feedback.hpp  data_motion_rgbd.hpp
launch/: babbling.launch  db_manager.launch  image_processing.launch  motion_detector.launch  robot_controller.launch  supervisor_wave_3.launch  tracking_test.launch
launch/params/: experiment_settings.yml  global_params.yml  planner_params.yml  supervisor_wave_3.yml  wave_3_metadata.yml
rviz/: object_babbling.rviz
src/: babbling_node.cpp  baxter_moveit_utils.cpp  crustcrawler_moveit_utils.cpp  db_manager_node.cpp  image_processing_node.cpp  motion_detector_node.cpp  supervisor_node.cpp
srv/: get_targets.srv  is_moving.srv  set_target.srv  track.srv
tools/: manual_dataset_build.cpp  object_babbling_evaluation.cpp  tracking_test.cpp
