<?xml version="1.0"?>
<package>
    <name>object_babbling</name>
    <version>0.1.0</version>
    <description>The object babbling package</description>

    <maintainer email="jonathan.crouzet.jc@gmail.com">jonathan</maintainer>

    <license>TODO</license>

    <buildtool_depend>catkin</buildtool_depend>

    <build_depend>cv_bridge</build_depend>
    <build_depend>roscpp</build_depend>
    <build_depend>rospy</build_depend>
    <build_depend>std_msgs</build_depend>
    <build_depend>image_transport</build_depend>
    <build_depend>tf</build_depend>
    <build_depend>cafer_core</build_depend>
    <build_depend>message_generation</build_depend>
    <build_depend>yaml_cpp</build_depend>
    <build_depend>moveit_ros_planning_interface</build_depend>
    <build_depend>rgbd_utils</build_depend>
    <build_depend>baxter_mover_utils</build_depend>

    <run_depend>cv_bridge</run_depend>
    <run_depend>roscpp</run_depend>
    <run_depend>rospy</run_depend>
    <run_depend>std_msgs</run_depend>
    <run_depend>actionlib_msgs</run_depend>
    <run_depend>sensor_msgs</run_depend>
    <run_depend>message_runtime</run_depend>
    <run_depend>image_transport</run_depend>
    <run_depend>tf</run_depend>
    <run_depend>cafer_core</run_depend>
    <run_depend>yaml_cpp</run_depend>
    <run_depend>moveit_ros_planning_interface</run_depend>
    <run_depend>rgbd_utils</run_depend>
    <run_depend>baxter_mover_utils</run_depend>

    <export>
        <!-- Other tools can request additional information be placed here -->
    </export>
</package>
